--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -135,3 +135,49 @@ img {
         max-width: 1140px;
     }
  }
+
+ @media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+ }
+
+ @media screen and (max-width: 480px) {
+    .row {
+      flex-direction: column;
+      align-items: center;
+      gap: 50px;
+    }
+
+    .lessons {
+        padding-bottom: 3rem;
+    }
+
+    .lessons .col {
+        width: 100%;
+    }
+
+    .steps {
+        margin: 0 0;
+    }
+
+    .steps .col {
+        width: 100%;
+    }
+    
+    .why-us {
+        background-color: #222222;
+        margin-bottom: 0;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
+
+    .why-us .col-left {
+        width: 100%;
+    }
+    
+    .why-us .col-right {
+        width: 100%;
+    }
+ }
+ 
